force-app/main/default/objects/ks_pmj_base__SpecificationChange__c/ks_pmj_base__SpecificationChange__c.object-meta.xml
<CustomObject>
    <label>変更管理</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>管理No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>