force-app/main/default/objects/ks_pmj_base__SpecificationChange__c/fields/ka_sagyonai11__c.field-meta.xml
<CustomField>
    <fullName>ka_sagyonai11__c</fullName>
    <label>作業内容</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>