force-app/main/default/objects/ks_pmj_base__SpecificationChange__c/fields/Ka_taisyo11__c.field-meta.xml
<CustomField>
    <fullName>Ka_taisyo11__c</fullName>
    <label>対象オブジェクト</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>得意先</fullName>
            </value>
            <value>
                <fullName>得意先担当者</fullName>
            </value>
            <value>
                <fullName>商談</fullName>
            </value>
            <value>
                <fullName>その他カスタム</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>