force-app/main/default/objects/ks_pmj_base__SpecificationChange__c/fields/Ka_tantou1__c.field-meta.xml
<CustomField>
    <fullName>Ka_tantou1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>作業担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ka_234</relationshipName>
    <type>Lookup</type>
</CustomField>