force-app/main/default/objects/ks_pmj_base__SpecificationChange__c/fields/ka_youbou1__c.field-meta.xml
<CustomField>
    <fullName>ka_youbou1__c</fullName>
    <label>要望</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>