force-app/main/default/objects/ks_pmj_base__SpecificationChange__c/fields/ks_pmj_base__ChangeDate__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__ChangeDate__c</fullName>
    <label>変更日</label>
    <type>Date</type>
</CustomField>