force-app/main/default/objects/ks_pmj_base__SpecificationChange__c/fields/ks_pmj_base__Function__c.field-meta.xml
<CustomField>
    <fullName>ks_pmj_base__Function__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>機能</label>
    <referenceTo>ks_pmj_base__Function__c</referenceTo>
    <relationshipLabel>変更管理</relationshipLabel>
    <relationshipName>SpecificationChange</relationshipName>
    <type>Lookup</type>
</CustomField>