force-app/main/default/objects/ks_pmj_base__SpecificationChange__c/listViews/ka_taiou123.listView-meta.xml
<ListView>
    <fullName>ka_taiou123</fullName>
    <columns>ka_yusend1234__c</columns>
    <columns>NAME</columns>
    <columns>ka_youbou1__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>対応中</label>
</ListView>